# jacg

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: linux-tests.yml
example/: example_api_spec.json  example_application.py
scripts/: install.sh  run_example.sh  run_jacg.sh
src/: generated_content_writer.py  jacg.py  jacg_cli.py  json_socket.py  logger_configurator.py  main.py  paths.py  utils.py
src/api_connectors/: api_connector_factory.py  types.py
src/api_connectors/clocks/: clock_interface.py  default_clock.py
src/api_connectors/connectors/: api_connector_interface.py  default_api_connector.py
src/api_connectors/json_encoders/: default_json_encoder.py  json_encoder_interface.py
src/api_connectors/sockets/: default_socket.py  socket_interface.py  (+1 more)
src/api_model/: api_model.py  api_model_creator.py  command_model.py  enum_field_model.py  enum_model.py  list_model.py  struct_field_model.py  struct_model.py
src/commands/: run_command_handler.py
src/exceptions/: unsupported_api_connector_type.py
src/generators/: api_client_generator.py  enums_generator.py  generator_interface.py  python_code_generator.py  request_serializers_generator.py  response_deserializers_generator.py  structs_generator.py
src/json_socket_handler/: json_socket_handler_interface.py
templates/: api_client.template  enum.template  request_serializer.template  response_deserializer.template  struct.template
test/integration/: shell_command_execution_failed.py  shell_command_runner.py  test_run_integration_test.py
test/unit/: test_setup.py
(+68 files in other folders)
